[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Fonts/MovieTheaterFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/LevelMenus/Resource/PauseMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="StyleBoxEmpty" id=40]

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="StyleBoxEmpty" id=41]

[sub_resource type="StyleBoxEmpty" id=45]

[sub_resource type="StyleBoxEmpty" id=46]

[sub_resource type="DynamicFont" id=42]
size = 64
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
visible = false
script = ExtResource( 3 )

[node name="MainWindow" type="Sprite" parent="."]
pause_mode = 2
light_mask = 32
position = Vector2( 952, 468 )
scale = Vector2( 0.6575, 0.648193 )

[node name="MainBackground" type="Polygon2D" parent="MainWindow"]
pause_mode = 2
show_behind_parent = true
light_mask = 0
position = Vector2( -9, 1 )
color = Color( 0.25098, 0.25098, 0.25098, 0.784314 )
polygon = PoolVector2Array( -375, -396, 394, -397, 395, 397, -373, 398 )

[node name="Resume" type="Button" parent="MainWindow"]
pause_mode = 2
light_mask = 0
margin_left = -285.0
margin_top = -359.0
margin_right = -158.0
margin_bottom = -323.0
rect_scale = Vector2( 4.5, 4.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.254902, 0.254902, 0.254902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 39 )
custom_styles/pressed = SubResource( 40 )
custom_styles/focus = SubResource( 43 )
custom_styles/disabled = SubResource( 44 )
custom_styles/normal = SubResource( 41 )
toggle_mode = true
text = "RESUME"

[node name="HTP" type="Button" parent="MainWindow"]
pause_mode = 2
modulate = Color( 0, 0, 0, 1 )
light_mask = 0
margin_left = -379.943
margin_top = -174.331
margin_right = -209.943
margin_bottom = -138.331
rect_scale = Vector2( 4.5, 4.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.254902, 0.254902, 0.254902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 39 )
custom_styles/pressed = SubResource( 40 )
custom_styles/focus = SubResource( 45 )
custom_styles/disabled = SubResource( 46 )
custom_styles/normal = SubResource( 41 )
toggle_mode = true
text = "HOWTOPLAY"
icon_align = 1

[node name="Main Menu" type="Button" parent="MainWindow"]
pause_mode = 2
light_mask = 0
margin_left = -361.0
margin_top = 30.0
margin_right = -201.0
margin_bottom = 66.0
rect_scale = Vector2( 4.5, 4.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.254902, 0.254902, 0.254902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 39 )
custom_styles/pressed = SubResource( 40 )
custom_styles/normal = SubResource( 41 )
toggle_mode = true
text = "MAIN MENU"

[node name="Quit" type="Button" parent="MainWindow"]
pause_mode = 2
light_mask = 0
margin_left = -281.0
margin_top = 217.0
margin_right = -154.0
margin_bottom = 253.0
rect_scale = Vector2( 4.5, 4.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.254902, 0.254902, 0.254902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 39 )
custom_styles/pressed = SubResource( 40 )
custom_styles/normal = SubResource( 41 )
toggle_mode = true
text = "QUIT"

[node name="Perks" type="Control" parent="."]
pause_mode = 2
margin_left = 4.0
margin_top = 137.0
margin_right = 44.0
margin_bottom = 177.0

[node name="Polygon2D" type="Polygon2D" parent="Perks"]
pause_mode = 2
position = Vector2( 82.1782, 17.1706 )
scale = Vector2( 0.936791, 0.851462 )
color = Color( 0.25098, 0.25098, 0.25098, 0.784314 )
polygon = PoolVector2Array( 1221, 132, 1221, 532, 1838, 533, 1838, 325.122, 1837, 131.338 )

[node name="ActivePerks" type="GridContainer" parent="Perks"]
pause_mode = 2
margin_left = 1323.0
margin_top = 229.0
margin_right = 1711.0
margin_bottom = 982.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ActivePerksLabel" type="Label" parent="Perks"]
pause_mode = 2
modulate = Color( 0, 0, 0, 1 )
margin_left = 1253.0
margin_top = 130.0
margin_right = 1525.0
margin_bottom = 186.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 42 )
text = "Active_Perks"
align = 1
valign = 1

[connection signal="pressed" from="MainWindow/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MainWindow/HTP" to="." method="_on_HTP_pressed"]
[connection signal="pressed" from="MainWindow/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="MainWindow/Quit" to="." method="_on_Quit_pressed"]
